$Id$
===============================================================

256	Luke Howard <lukeh@padl.com>

	* patch from Tomas Janousek <tjanouse@redhat.com>
	  to check for pthread_once()

255	Luke Howard <lukeh@padl.com>

	* fix for BUG#303: SSL port behavior change since
	  version 241
	* fix for BUG#304: fd leak in do_close_no_unbind
	* fix for BUG#313: assertion in do_init() when no
	  host/uri is configured
	* patch from Adrian Bridgett <adrian@smop.co.uk>
	  for Debian BUG#375533: Assertion failure in
	  libnss-ldap

254	Luke Howard <lukeh@padl.com>

	* fix for BUG#292: array bounds check in ldap-network.c
	* fix for BUG#296: fix stack buffer optimization
	* fix for BUG#297: gethostbyname2 queried with AF_INET6
	  returns OK with IPv4 address
	* fix for Novell BUG#215911: crasher parsing nested
	  groups

253	Luke Howard <lukeh@padl.com>

	* fix crasher if an empty buffer is passed to
	  initgroups (glibc NSS only)
	* fix for BUG#283: netgroup assertion failure in
	  Solaris mountd

252	Luke Howard <lukeh@padl.com>

	* doc/lookup_nssldap.c: rewrite for autofs-4.1.3

251	Luke Howard <lukeh@padl.com>

	* remove doc/rfc2307.txt, it is available from
	  http://www.ietf.org/rfc/rfc2307.txt
	* make objectClass a mappable attribute

250	Luke Howard <lukeh@padl.com>

	* don't use static _nss_ldap_no_members buffer,
	  causes crash when nss_ldap is unloaded and memory
	  is still referenced
	* fix for BUG#249: tcsh closes file descriptors,
	  confuses nss_ldap and hangs (from David Houlder)
	* fix for BUG#257: initgroups() broken in RFC2307bis
	  support disabled
	* fix for BUG#261: sslpath example wrong
	* fix for BUG#263: compile do_triple_permutations()
	  when IRS enabled

249	Luke Howard <lukeh@padl.com>

	* fix for BUG#253: build broken on AIX
	* fix for BUG#255: deadlock in initgroups

248	Luke Howard <lukeh@padl.com>

	* fix regression in per-objectclass attribute mapping
	  introduced in nss_ldap-246

247	Luke Howard <lukeh@padl.com>
