@@ -4,7 +4,8 @@ $Id$
 256	Luke Howard <lukeh@padl.com>
 
 	* patch from Tomas Janousek <tjanouse@redhat.com>
-	  to check for pthread_once()
+	  to check for pthread_once(); __pthread_once does
+	  not imply __pthread_atfork being non-NULL
 
 255	Luke Howard <lukeh@padl.com>
 
